v1.5
added
- highlighting of full currently selected table row

fixed
- deselection in tables impossible
- out-of-sync scrolling in tables

moved Styles-class to kafx
replaced column fixed tables with TableView2 (controlsfx)
updated to "themed"-styling